--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,15 +1,14 @@
 nav {
     height: 7.5vmin;
     margin-bottom: 2vmin;
-    background-color: #1C1C1C;
-    color: white;
+    color: black;
     display: flex;
     justify-content: flex-end;
     align-items: center;
   }
   
   nav > a {
-    color: white;
+    color: black;
     text-decoration: none;
     margin-right: 50px;
   }
