--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -11,7 +11,7 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 30vh;
+	height: 40vh;
 	z-index: 100;
 
 	background: rgb(255, 255, 255);
@@ -29,7 +29,7 @@
 	font-size: 100px;
 	display: flex;
 	position: absolute;
-	bottom: 20vh;
+	bottom: 30vh;
 	left: 50%;
 	transform: translateX(-50%);
 	user-select: none;
@@ -57,4 +57,10 @@
 			}
 		}
 	}
+}
+
+.sub-title {
+    font-style: "Yanone Kaffeesatz";
+    font-size: 20px;
+    margin-top: 380px;
 }
