--- a/src/components/Poem/Poem.css
+++ b/src/components/Poem/Poem.css
@@ -1,6 +1,7 @@
 .poem-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 2rem;
     margin: 1.3rem 0;
     background-color: var(--tan-1);
@@ -25,7 +26,6 @@
   }
   
   .delete-poem {
-    position: absolute;
     right: 70px;
     font-size: 14px;
   }
@@ -39,7 +39,6 @@
   }
   
   .edit-poem {
-    position: absolute;
     right: 160px;
     font-size: 14px;
   }
@@ -54,4 +53,16 @@
   
   .logout:hover {
     color: rgba(0, 0, 0, 0.7)
+  }
+
+  .poem-content {
+    display: flex;
+    flex-direction: row;
+    white-space: pre-wrap;
+  }
+
+  .poem-buttons {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
   }
